--- a/style.css
+++ b/style.css
@@ -268,12 +268,12 @@ button.light {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   transition: all 0.3s ease;
   position: relative;
-  cursor: pointer;
 }
 
 #product1 .pro img {
   width: 100%;
   border-radius: 25px;
+  cursor: pointer;
 }
 
 #product1 .pro .description {
@@ -373,7 +373,7 @@ button.light {
   justify-content: center;
   align-items: flex-start;
   background-image: url(img/banner/b17.jpg);
-  min-width: 850px;
+  min-width: 49%;
   height: 50vh;
   padding: 3rem;
   background-size: cover;
@@ -674,7 +674,45 @@ footer .copyright p a {
   width: 50%;
   line-height: 25px;
 }
+
+/* voltar para o topo */
+
+.back-to-top {
+  position: relative;
+}
+
+.back-to-top i {
+  font-size: 2.5rem;
+  border: 1px solid #088178;
+  background-color: #088178;
+  color: #fff;
+  clip-path: circle();
+  cursor: pointer;
+
+  visibility: hidden;
+  opacity: 0;
+
+  position: fixed;
+  left: 92%;
+  bottom: 5%;
+
+  transition: 0.3s;
+  transform: translateY(100%);
+}
+
+.back-to-top.show i {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0%);
+}
+
+.back-to-top i:hover {
+  filter: brightness(1.2);
+}
+
 /* media query */
+@media (max-width: 1440px) {
+}
 
 @media (max-width: 829px) {
   .section-p1 {
@@ -830,7 +868,7 @@ footer .copyright p a {
   }
 
   #banner {
-    height: 30vh;
+    height: 35vh;
   }
 
   #banner h2 {
@@ -843,4 +881,14 @@ footer .copyright p a {
   }
 
   /* Single product */
+}
+
+@media (max-width: 300px) {
+  #sm-banner .banner-box {
+    height: 35vh;
+  }
+
+  #newsletter input {
+    width: 12rem;
+  }
 }
