--- a/style.css
+++ b/style.css
@@ -31,6 +31,12 @@ h6 {
   font-size: 12px;
 }
 
+html,
+body {
+  -webkit-font-smoothing: antialiased;
+  scroll-behavior: smooth;
+}
+
 p {
   font-size: 16px;
   color: #465b52;
@@ -43,10 +49,6 @@ p {
 
 .section-m1 {
   margin: 40px 0;
-}
-
-body {
-  width: 100%;
 }
 
 button.normal {
@@ -124,16 +126,13 @@ button.light {
 
 #navbar li a.active::after {
   content: '';
-  width: 0%;
+  width: 50%;
   height: 2px;
   background-color: #088178;
   position: absolute;
   bottom: -4px;
   left: 20px;
   transition: 0.3s ease;
-}
-#navbar li a.active:hover::after {
-  width: 50%;
 }
 
 #navbar li .cart {
@@ -209,7 +208,6 @@ button.light {
   width: 180px;
   text-align: center;
   padding: 25px 15px;
-  box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.06);
   border: 1px solid #cce7d0;
   border-radius: 4px;
   margin: 15px 0;
@@ -678,36 +676,36 @@ footer .copyright p a {
 /* voltar para o topo */
 
 .back-to-top {
-  position: relative;
-}
-
-.back-to-top i {
-  font-size: 2.5rem;
-  border: 1px solid #088178;
-  background-color: #088178;
+  background: #088178;
   color: #fff;
+
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+
+  padding: 0.5rem;
   clip-path: circle();
-  cursor: pointer;
+
+  font-size: 1.5rem;
+  line-height: 0;
+
+  scroll-behavior: smooth;
 
   visibility: hidden;
   opacity: 0;
-
-  position: fixed;
-  left: 92%;
-  bottom: 5%;
 
   transition: 0.3s;
   transform: translateY(100%);
 }
 
-.back-to-top.show i {
-  visibility: visible;
-  opacity: 1;
-  transform: translateY(0%);
+.back-to-top:hover {
+  background-color: #0cd6c9;
 }
 
-.back-to-top i:hover {
-  filter: brightness(1.2);
+.back-to-top.show {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
 }
 
 /* media query */
